--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "@types/cookie-parser": "^1.4.7",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^8.2.3",
-        "@types/express": "^4.17.3",
+        "@types/express": "^4.17.21",
         "@types/image-size": "^0.8.0",
         "@types/inquirer": "^9.0.7",
         "@types/jsonwebtoken": "^9.0.8",
@@ -48,7 +48,7 @@
         "@anthropic-ai/vertex-sdk": "^0.7.0",
         "@azure/openai": "^2.0.0",
         "@google-cloud/vertexai": "^1.9.3",
-        "@google/genai": "^0.7.0",
+        "@google/generative-ai": "^0.24.0",
         "@tootallnate/quickjs-emscripten": "^0.23.0",
         "@types/adm-zip": "^0.5.7",
         "@types/cheerio": "^0.22.35",
@@ -64,6 +64,7 @@
         "body-parser": "^2.2.0",
         "chalk": "^5.3.0",
         "cheerio": "^1.0.0",
+        "cohere-ai": "^7.16.0",
         "cookie": "^1.0.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -103,6 +104,8 @@
         "pdfjs-dist": "^5.0.375",
         "pg": "^8.11.3",
         "puppeteer": "^24.4.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
         "quickjs-emscripten": "^0.31.0",
         "rxjs": "^7.8.1",
         "simple-git": "^3.27.0",
